测试类降级